utp/compII/toscal/tests/semantic/fail/redeclared-procedure.pas
program complain_about_redeclared_procedures;
var a, b : integer;

procedure p;
var c : char;
begin
	c := 'a';
end;

function p : integer;
	p := 1;
end;

begin
	l
end;
